--- a/functions/package.json
+++ b/functions/package.json
@@ -3,9 +3,9 @@
   "engines": {
     "node": "20"
   },
-  "main": "index.js",
   "dependencies": {
     "firebase-functions": "^4.6.0",
+    "firebase-admin": "^12.0.0",
     "openai": "^4.0.0",
     "busboy": "^1.6.0"
   }
