--- a/functions/package.json
+++ b/functions/package.json
@@ -1,7 +1,7 @@
 {
   "name": "functions",
   "engines": {
-    "node": "20"
+    "node": ">=20.0.0"
   },
   "dependencies": {
     "firebase-functions": "^4.6.0",
